# rand_scenario_p

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  norm.rs
test/: .gitignore  test_scenario.toml
